# Timesheet

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml
apps/api/: .env.example  README.md  pyproject.toml  timesheet-backend.spec
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: launcher.py  main.py  models.py
apps/api/app/core/: audit.py  config.py  crypto.py  crypto_state.py  db.py  deps.py  errors.py  logging.py  middleware.py  security.py
apps/api/app/modules/atividades/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/modules/auditoria/: model.py  repository.py  router.py  schema.py
apps/api/app/modules/auth/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/modules/jornadas/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/modules/justificativas/: model.py  repository.py
apps/api/app/modules/marcacoes/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/modules/privacidade/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/modules/relatorios/: invalidation.py  pdf.py  (+7 more)
apps/api/scripts/: build-backend.ps1
apps/api/tests/: conftest.py  helpers.py  test_atividade.py  test_audit.py  test_auditoria_get.py  test_auth_login.py  test_auth_refresh_logout.py  test_config_endpoint.py  test_crypto.py  test_db.py  test_deps_current_terceiro.py  test_errors_handler.py  test_health.py  test_jornadas_detail_and_put.py  test_jornadas_list.py  test_jornadas_manual.py  test_launcher.py  test_logging_redact.py  test_marcacoes_post.py  test_marcacoes_put.py  test_migration_0001.py  test_models.py  test_openapi_disabled_in_prod.py  test_privacidade.py  test_rate_limit.py  test_ready_endpoint.py  test_relatorios_endpoints.py  test_relatorios_pdf.py  test_scheduler.py  test_security_jwt.py  test_security_middleware.py  test_security_password.py  test_smoke_integration.py  test_smtp.py  test_startup_imports.py  test_terceiros_me.py  test_terceiros_post.py
(+300 files in other folders)
