[project]
name = "timesheet-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "pydantic==2.9.*",
  "pydantic-settings==2.6.*",
  "structlog==24.4.*",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.*",
  "pytest-asyncio==0.24.*",
  "httpx==0.27.*",
  "ruff==0.7.*",
  "mypy==1.13.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
