[project]
name = "timesheet-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "pydantic[email]==2.9.*",
  "pydantic-settings==2.6.*",
  "structlog==24.4.*",
  "sqlalchemy==2.0.*",
  "alembic==1.13.*",
  "aiosqlite==0.20.*",
  "cryptography==43.*",
  "python-jose[cryptography]==3.3.*",
  "passlib[argon2]==1.7.*",
  "argon2-cffi==23.*",
  "slowapi==0.1.9",
  "python-stdnum==1.20.*",
  "weasyprint==62.*",
  "jinja2==3.1.*",
  "apscheduler==3.10.*",
  "tzdata==2024.*",
  "pywin32==306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.*",
  "pytest-asyncio==0.24.*",
  "httpx==0.27.*",
  "ruff==0.7.*",
  "mypy==1.13.*",
]
build = [
  "pyinstaller==6.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
